# ProjetRamassagePoubelle

./: IMPLEMENTATION.md  PROJECT.md  README.md
drone_navigation/msg/: DetectedObject.msg  DockCommand.msg  DockStatus.msg
drone_navigation/src/: approach_controller.cpp  battery_monitor.cpp  flight_controller.cpp  perception_node.cpp
playbook/: 01-prompt-maitre.md  02-architecture-haut-niveau.md  03-architecture-fonctionnelle.md  03-architecture-fonctionnelle_CORRIGE.md  04-architecture-technologique.md  05-camion.md  05-camion_CORRIGE.md  06-drone.md  06-drone_CORRIGE.md  07-backend.md  07-backend_CORRIGE.md  08-application-mobile.md  09-coordination-multi-agents.md  09-coordination-multi-agents_CORRIGE.md  10-simulation-plan.md  10-simulation-plan_CORRIGE.md  11-roadmap-12-semaines.md  12-mermaid-diagram.md  README.md  VALIDATION_01_arch_haut.md  VALIDATION_02_arch_fonc.md  VALIDATION_03_camion.md  VALIDATION_04_drone.md  VALIDATION_05_backend.md  VALIDATION_06_mobile.md  VALIDATION_07_coord.md  VALIDATION_08_sim.md  revue-comite-architecture-systeme.md  revue-comite-backend-mobile.md  revue-comite-coordination-simulation.md  revue-comite-roadmap.md  revue-comite-vehicule-drones.md
playbook/impl/: PREREQUIS_COMPILATION.md  fix_ros_key.sh  impl_backend_api.md  impl_camion_ros2.md  impl_drone_ros2.md  impl_final.md  impl_mobile_mvp.md  impl_orchestrateur.md  impl_simulation.md  impl_simulation_code.md  impl_tests.md  install_openclaw.sh  install_openclaw_README.md  review_backend_api.md  review_camion_ros2.md  review_drone_ros2.md  review_final.md  review_mobile_mvp.md  review_orchestrateur.md  review_simulation.md  review_simulation_code.md  review_tests.md  status_BACKEND.md  status_MOBILE.md  status_ROS2.md
playbook/impl/simulation/config/: simulation.yaml
playbook/impl/simulation/gazebo/models/drone/: model.sdf
playbook/impl/simulation/gazebo/models/truck/: model.sdf
playbook/impl/simulation/gazebo/worlds/: openclaw_world.sdf
playbook/impl/simulation/scripts/: analyze_results.py  run_simulation.sh
playbook/impl/simulation/test/: CMakeLists.txt  simulation_test.cpp
playbook/impl/src/drone_navigation/: CMakeLists.txt  package.xml
playbook/impl/src/drone_navigation/config/: params.yaml
playbook/impl/src/drone_navigation/launch/: drone.launch.py
playbook/impl/src/drone_navigation/src/: docking_manager.cpp  failsafe_node.cpp
playbook/impl/src/truck_navigation/launch/: truck.launch.py
playbook/impl/src/truck_navigation/src/: nav_node.cpp  telemetry_publisher.cpp  trajectory_predictor.cpp
playbook/impl/src/truck_navigation/test/: test_nav_node.cpp  test_trajectory_predictor.cpp
scripts/: build.sh  install_dependencies.sh  run_simulation.sh  run_system.sh
truck_navigation/: CMakeLists.txt  package.xml
truck_navigation/config/: params.yaml
truck_navigation/msg/: PredictedTrajectory.msg
truck_navigation/src/: localization_node.cpp
